@startuml

class Aluno {
Integer id
String nome
String senha
String email
Boolean cursa_matematica
Boolean cursa_portugues
String description
String picture
String picture_mime_type
void set_id(Integer id)
void set_nome(String nome)
void set_email(String email)
void set_senha(String password)
void set_cursa_matematica(Boolean value)
void set_cursa_portugues(Boolean value)
void set_description(String description)
void set_picture(String picture)
void set_picture_mime_type(String mime_type)
Integer get_id()
String get_nome()
String get_email()
String get_senha()
Boolean get_matematica()
Boolean get_portugues()
String get_description()
String get_picture()
String get_picture_mime_type()
Array to_sqlite()
}
class Admin {
String nome
String senha
String email
void set_nome(String nome)
void set_email(String email)
void set_senha(String senha)
String get_nome()
String get_email()
String get_senha()
}
class Curso {
Array questoes
void set_questoes(Array questoes)
void set_questao(Integer index, Questao questao)
Array get_questoes()
Questao get_questao(Integer index)
}
class Questao {
Integer id
Integer category
String text
String picture
String picture_mime_type
String alternatives
Integer correct_alternatives
Integer added_by
Integer get_id()
Integer get_category()
String get_text()
String get_pic()
String get_mime_type()
String get_alt()
Integer get_c_alt()
Integer get_added_by()
void set_id(Integer id)
void set_category(Integer category)
void set_text(String text)
void set_pic(String picture)
void set_mime_type(String picture_mime_type)
void set_alt(String alternatives)
void set_c_alt(Integer correct_alternatives)
void set_added_by(Integer added_by)
}
class Resposta {
Integer usuario_id
Integer questao_id
void set_usuario(Integer id)
void set_questao(Integer id)
Integer get_usuario()
Integer get_questao()
}
abstract class DAO <<static>> {
void setup_db()
Array listar()
Array listar_id(Integer id)
Array listar_atributo(String nome_atributo, Any valor)
excluir_id(Integer id)
editar_id(Integer id)
salvar(Any objeto)
}

Aluno <|-- DAO
Admin <|-- DAO
Questao <|-- DAO

Aluno "1" - "0..*" Resposta
Curso "1" - "1..*" Questao
Resposta "1..*" - "1" Questao
Admin "1" - "0..*" Questao

@enduml